name:                hroll
version:             0.1.0.0
synopsis:            Haskell implementation of rolling algorithms
description:         Please see README.md
homepage:            https://github.com/charles-cooper/hroll#readme
license:             BSD3
license-file:        LICENSE
author:              Charles Cooper
maintainer:          cooper.charles.m@gmail.com
copyright:           2016 Charles Cooper
category:            Algorithms, Data Structures, Numerical, Math, Statistics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hroll
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Deque,
                       Covariance
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
